tests/syntax_tests/data/parsing/errors/scanner/exponent_notation.res
let x = 1e1

let x = 1e_1

let x = 1_e_1

let x = 1e

let x = 1_e_

let x = 1.
